--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.1.0",
+        "aos": "^2.3.4",
         "bootstrap": "^5.3.8",
         "bootstrap-icons": "^1.13.1"
     }
