--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^7.1.0",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.8",
-        "bootstrap-icons": "^1.13.1"
+        "bootstrap-icons": "^1.13.1",
+        "sweetalert2": "^11.26.3"
     }
 }
